# dj-course

./: .gitignore  AGENDA.md  HOWTO-NODEJS.md  HOWTO-PYTHON.md  LINKS-and-STUFF.md  README.md
.claude/: agents
M1/: HOMEWORK-cz.1.md  HOMEWORK-cz.2.md  HOMEWORK.md  LINKS-and-STUFF.md  LINKS.md  README.md
M1/agents/: .env.example  agent_math_enforce.py  requirements.txt
M1/azor-chatdog/: .env.example  requirements.txt
M1/azor-chatdog-py/: .env.example  .gitignore  AUDIO_COMMANDS.md  GENERATION-PARAMS.md  requirements.txt
M1/dj-llm-manager/: .env.example  INITIAL-CHAT-PROMPTS.md  README.md  dj_manager.py  requirements.txt
M1/embedding/: .gitignore  GPT2-TOKENIZER-PROBLEM.md  README.md  SBERT-README.md  ZADANIE-4.2-RAPORT.md  corpora.py  doc2vec_model_sentence_map_combined.json  doc2vec_training_registry.json  inferring.py  (+16 more)
M10/wms/wms-data-generator/: .gitignore  generate-and-sync.sh  generate.sh  pyproject.toml
M10/wms/wms-data-generator/schema/: create-wms-schema-old.sql  create-wms-schema.sql
M10/wms/wms-data-generator/src/: config.py
M10/wms/wms-data-generator/src/generators/payments/: payments.py
M10/wms/wms-data-generator/src/queries/: __init__.py
M2/: HOMEWORK.md  PROMPTS.md  README.md
M3/: README.md
M4/: HOMEWORK.md
M5/: HOMEWORK.md  README.md
M6/: HOMEWORK.md  README.md
M6/deliveroo/wms-api/: .http  pyproject.toml  run-local.sh
M6/deliveroo/wms-api/src/: application.py
M6/deliveroo/wms-api/src/routes/: contractors.py  warehouse.py
M7/: HOMEWORK.md  README.md
M8/: HOMEWORK.md  indexes-gin.sql
M9/: .http  README.md
(+4632 files in other folders)
